# AI-job-analysis

./: .env  milestone-1-skeleton-and-tools.md  milestone-2-prompt-tuning-and-behavior.md  milestone-3-subgraph-and-structured-output.md  milestone-4-persistence-and-dedup.md  milestone-5-deployment-and-monitoring.md  pyproject.toml  run_agent.py  todo.md
src/: config.py
src/agent/: graph.py  nodes.py  prompts.py  state.py  tools.py  types.py
tests/: test_golden_cases.py
